Adicionados métodos para suporte ao ItemEdit e Oraxen